<resources>
    <string name="app_version">Version</string>
    <string name="app_licences"><u>Open source licences</u></string>
    <string name="app_faq"><u>FAQ</u></string>
    <string name="app_terms_of_use"><u>Terms of use</u></string>
    <string name="app_not_supported_yet">This operation is not supported yet</string>
    <string name="author">Author: </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="terms_of_use_agreement">I agree to the <u>Terms of use</u></string>
    <string name="sign_in">Sign in</string>
    <string name="not_registred">Not registered yet?</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="register">register</string>
    <string name="forget_password"><u>I forget my password</u></string>

    <string name="error_field_required">Required!</string>
    <string name="error_rest_retries_failed">Retry requests failed. Try again later.</string>

    <string name="home">Home</string>
    <string name="history">Search history</string>
    <string name="help_and_settings"><![CDATA[Help & Settings]]></string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>




    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_database_query">Database query problem</string>
    <string name="error_internet_connection">Internet connection problem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="empty_start_list">List is empty. Add new city name.</string>
    <string name="empty_history_list">List is empty. Make sure you turned on \'Store search history on your device\' setting and added city name in home view.</string>


    <string name="enter_city">Enter city</string>
    <string name="localize_city">Localize city...</string>
    <string name="information">Information</string>
    <string name="localization">Localization</string>
    <string name="please_wait">Please wait...</string>

    <string name="locality">Locality</string>
    <string name="community">Community</string>
    <string name="district">District</string>
    <string name="province">Province</string>

    <string name="geocode_no_results">No results for given address</string>
    <string name="geocode_unknown_error">Unknown error. Try again later</string>
    <string name="geocode_request_denied">Request denied</string>
    <string name="geocode_invalid_request">Invalid request</string>
    <string name="geocode_over_query_limit">Limit is exceeded</string>
    <string name="geocode_no_city_results">Results not found</string>
</resources>
