<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <TextView
        android:id="@+id/tvEmptyCitiesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView"
        android:text="@string/empty_start_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/lvCities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView"
        android:cacheColorHint="@color/transparent"
        android:dividerHeight="1dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
