<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tvEmptyHistoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_history_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/lvHistory"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="@color/transparent"
        android:dividerHeight="1dp"
        android:descendantFocusability="afterDescendants"/>

</RelativeLayout>
